<resources>
    <string name="app_name">Terrarium</string>

    <string name="action_login">Login</string>
    <string name="action_refresh">Aktualisieren</string>

    <string name="user_hint">Benutzername eingeben</string>
    <string name="pass_hint">Passwort eingeben</string>
    <string name="button_save">Speichern</string>
    <string name="button_login">Anmelden</string>
    <string name="button_cancel">Abbrechen</string>

    <string name="last_entry">Letzter Eintrag:</string>
    <string name="temp_top">Temperatur Oben:</string>
    <string name="temp_mid">Temperatur Mitte:</string>
    <string name="temp_bottom">Temperatur Unten:</string>
    <string name="humidity">Luftfeuchtigkeit:</string>

    <string name="vent">Lüftersteuerung:</string>
    <string name="vent_auto">Auto</string>
    <string name="vent_manual">Manuell</string>
    <string name="sunrise">Aktueller Sonnenaufgang:</string>
    <string name="sunset">Aktueller Sonnenuntergang:</string>
    <string name="vent_on">Lüfter einschalten bei:</string>
    <string name="vent_off">Lüfter ausschalten bei:</string>

    <string name="value">Wert</string>
    <string name="time">Zeit</string>
</resources>
