<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="20dp"
                android:layout_height="10dp"
                android:layout_column="0" />

            <TextView
                android:text="@string/last_entry"
                android:id="@+id/last_entry"
                android:layout_column="1" />

            <Space
                android:layout_width="20dp"
                android:layout_height="10dp"
                android:layout_column="2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/last_entry_value"
                android:layout_column="3"
                android:text="@string/value" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/temp_top"
                android:id="@+id/temp_top"
                android:layout_column="1" />

            <Space
                android:layout_width="20dp"
                android:layout_height="10dp"
                android:layout_column="2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/temp_top_value"
                android:layout_column="3"
                android:text="@string/value" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/temp_mid"
                android:id="@+id/temp_mid"
                android:layout_column="1" />

            <Space
                android:layout_width="20dp"
                android:layout_height="10dp"
                android:layout_column="2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/temp_mid_value"
                android:layout_column="3"
                android:text="@string/value" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/temp_bottom"
                android:id="@+id/temp_bottom"
                android:layout_column="1" />

            <Space
                android:layout_width="20dp"
                android:layout_height="10dp"
                android:layout_column="2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/temp_bottom_value"
                android:layout_column="3"
                android:text="@string/value" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/humidity"
                android:id="@+id/humidity"
                android:layout_column="1" />

            <Space
                android:layout_width="20dp"
                android:layout_height="10dp"
                android:layout_column="2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/humidity_value"
                android:layout_column="3"
                android:text="@string/value" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"></TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

    </TableLayout>
</LinearLayout>